--- a/template/statistics.html
+++ b/template/statistics.html
@@ -1,7 +1,7 @@
 {% extends 'partials/base.html' %}
 {% load static %}
 
-{% block title %}Direct Links{% endblock %}
+{% block title %}Statistics{% endblock %}
 
 {% block content %}
 <div class="content-wrapper">
@@ -27,7 +27,7 @@
                   <td>{{ stat.date }}</td>
                   <td>{{ stat.placement }}</td>
                   <td>{{ stat.impressions }}</td>
-                  <td>${{ stat.revenue|floatformat:2 }}</td>
+                  <td>${{ stat.revenue|floatformat:4 }}</td>
                 </tr>
                 {% endfor %}
               </tbody>
@@ -50,7 +50,7 @@
               <span>Total Impressions</span>
             </div>
             <div class="d-flex flex-column align-items-center gap-1">
-              <h2 class="mb-2">${{ total_revenue|floatformat:2 }}</h2>
+              <h2 class="mb-2">${{ total_revenue|floatformat:4 }}</h2>
               <span>Total Revenue</span>
             </div>
           </div>
@@ -70,7 +70,7 @@
                     <small class="text-muted">Impressions: {{ item.total_impressions }}</small>
                   </div>
                   <div class="user-progress">
-                    <small class="fw-semibold">Revenue: ${{ item.total_revenue|floatformat:2 }}</small>
+                    <small class="fw-semibold">Revenue: ${{ item.total_revenue|floatformat:4 }}</small>
                   </div>
                 </div>
               </li>
