--- a/templates/partials/base.html
+++ b/templates/partials/base.html
@@ -123,6 +123,94 @@
                     </a>
                   </li>
                 </ul>
+                <ul class="dropdown-menu dropdown-menu-end">
+                  <li>
+                    <a class="dropdown-item" href="#">
+                      <div class="d-flex">
+                        <div class="flex-shrink-0 me-3">
+                          <div class="avatar avatar-online">
+                            {% if request.user.avatar %}
+                            <img src="{{request.user.avatar.url}}" alt class="w-px-40 h-auto rounded-circle" />
+                            {% else %}
+                            <img src="{% static 'assets/img/avatars/1.png' %}" alt
+                              class="w-px-40 h-auto rounded-circle" />
+                            {% endif %}
+                          </div>
+                        </div>
+                        <div class="flex-grow-1">
+                          <span class="fw-semibold d-block">{{request.user.first_name}}
+                            {{request.user.last_name}}</span>
+                          <small class="text-muted">{{request.user.username}}</small>
+                        </div>
+                      </div>
+                    </a>
+                  </li>
+                  <li>
+                    <div class="dropdown-divider"></div>
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="{% url 'account:logout' %}">
+                      <i class="bx bx-power-off me-2"></i>
+                      <span class="align-middle">Log Out</span>
+                    </a>
+                  </li>
+                </ul>
+              </li>
+              <li class="nav-item navbar-dropdown dropdown-user dropdown">
+                <a class="nav-link dropdown-toggle hide-arrow" href="javascript:void(0);" data-bs-toggle="dropdown">
+                    <i class="menu-icon text-dark tf-icons bx bx-bell" style="font-size: 28px;"></i>
+                </a>
+                <ul class="dropdown-menu dropdown-menu-end">
+                  {% if bel_notices %}
+                    {% for notice in bel_notices %}
+                      <li>
+                        <a class="dropdown-item" href="{% url 'core:notice_detail' notice.id %}">
+                          <span class="align-middle">{{ notice.title }}</span>
+                        </a>
+                      </li>
+                      {% if not forloop.last %}
+                        <li>
+                          <div class="dropdown-divider"></div>
+                        </li>
+                      {% endif %}
+                    {% endfor %}
+                  {% else %}
+                    <li>No notices available.</li>
+                  {% endif %}
+                </ul>
+                              
+                <ul class="dropdown-menu dropdown-menu-end">
+                  <li>
+                    <a class="dropdown-item" href="#">
+                      <div class="d-flex">
+                        <div class="flex-shrink-0 me-3">
+                          <div class="avatar avatar-online">
+                            {% if request.user.avatar %}
+                            <img src="{{request.user.avatar.url}}" alt class="w-px-40 h-auto rounded-circle" />
+                            {% else %}
+                            <img src="{% static 'assets/img/avatars/1.png' %}" alt
+                              class="w-px-40 h-auto rounded-circle" />
+                            {% endif %}
+                          </div>
+                        </div>
+                        <div class="flex-grow-1">
+                          <span class="fw-semibold d-block">{{request.user.first_name}}
+                            {{request.user.last_name}}</span>
+                          <small class="text-muted">{{request.user.username}}</small>
+                        </div>
+                      </div>
+                    </a>
+                  </li>
+                  <li>
+                    <div class="dropdown-divider"></div>
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="{% url 'account:logout' %}">
+                      <i class="bx bx-power-off me-2"></i>
+                      <span class="align-middle">Log Out</span>
+                    </a>
+                  </li>
+                </ul>
               </li>
             </ul>
           </div>
