fix name issues

--- a/templates/landing/base.html
+++ b/templates/landing/base.html
@@ -15,7 +15,7 @@
 </head>
 <body id="body" data-spy="scroll" data-target=".navbar" data-offset="100">
   <header id="header-section">
-    <nav class="navbar navbar-expand-lg pl-3 pl-sm-0" id="navbar">
+    <nav class="navbar navbar-expand-lg pl-3 pl-sm-0" id="navbar" style="padding: 0px !important;">
     <div class="container">
       <div class="navbar-brand-wrapper d-flex w-100">
         <img src="{% static 'logo_2.png' %}" alt="">
