--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -70,7 +70,7 @@
                 </a>
               </div>
               <!-- /Logo -->
-              <h4 class="mb-2">Welcome to Sneat! 👋</h4>
+              <h4 class="mb-2">Welcome to Cpa Robust! 👋</h4>
               <p class="mb-4">Please sign-in to your account and start the adventure</p>
 
               <form id="formAuthentication" class="mb-3" action="{% url 'account:login' %}" method="POST">
