--- a/templates/account/register.html
+++ b/templates/account/register.html
@@ -112,7 +112,7 @@
                     <input class="form-check-input" type="checkbox" id="terms-conditions" name="terms" />
                     <label class="form-check-label" for="terms-conditions">
                       I agree to
-                      <a href="javascript:void(0);">privacy policy & terms</a>
+                      <a href="{% url 'core:privacy' %}">privacy policy & terms</a>
                     </label>
                   </div>
                 </div>
