--- a/templates/landing/contact-us.html
+++ b/templates/landing/contact-us.html
@@ -49,7 +49,7 @@
       <section class="contact-details" id="contact-details-section">
         <div class="row text-center text-md-left">
           <div class="col-12 col-md-6 col-lg-3 grid-margin">
-            <img src="{% static 'assets2/images/Group2.svg' %}" alt="" class="pb-2">
+            <img src="{% static 'logo_2.png' %}" alt="" class="pb-2">
             <div class="pt-2">
               <p class="text-muted m-0">mikayla_beer@feil.name</p>
               <p class="text-muted m-0">906-179-8309</p>
