--- a/templates/partials/base.html
+++ b/templates/partials/base.html
@@ -60,6 +60,12 @@
 
       <!-- Layout container -->
       <div class="layout-page">
+
+        <div class="container mt-2">
+          <div class="alert alert-danger" role="alert">
+            Your account is currently inactive. Please contact with adminstrator.
+          </div>
+        </div>
         <!-- Navbar -->
 
         <nav class="layout-navbar container-xxl navbar navbar-expand-xl navbar-detached align-items-center bg-navbar-theme" id="layout-navbar">
