--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -63,14 +63,14 @@
             <div class="card-body">
               <!-- Logo -->
               <div class="app-brand justify-content-center">
-                <a href="{% url 'account:login' %}" class="app-brand-link gap-2">
+                <a href="{% url 'core:index' %}" class="app-brand-link gap-2">
                   <span class="app-brand-logo demo">
                     <img src="{% static 'logo_2.png' %}" alt="">
                   </span>
                 </a>
               </div>
               <!-- /Logo -->
-              <h4 class="mb-2">Welcome to Cpa Robust! 👋</h4>
+              <h4 class="mb-2">Welcome to CPA Robust! 👋</h4>
               <p class="mb-4">Please sign-in to your account and start the adventure</p>
 
               <form id="formAuthentication" class="mb-3" action="{% url 'account:login' %}" method="POST">
