--- a/templates/account/register.html
+++ b/templates/account/register.html
@@ -65,7 +65,7 @@
             <div class="card-body">
               <!-- Logo -->
               <div class="app-brand justify-content-center">
-                <a href="index.html" class="app-brand-link gap-2">
+                <a href="{% url 'core:index' %}" class="app-brand-link gap-2">
                   <span class="app-brand-logo demo">
                     <img src="{% static 'logo_2.png' %}" alt="">
                   </span>
