--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -164,8 +164,12 @@
                 alt="Default Notice Image" class="img-fluid rounded mb-2" />
               {% endif %}
               <h5 class="fw-bold">{{ latest_notice.title }}</h5>
-              <p class="text-muted">{{ latest_notice.description|safe|truncatechars:152 }}</p>
-              <a class="btn btn-sm btn-danger mb-3" href="{% url 'core:notice_detail' latest_notice.id %}">Read More</a>
+              <p class="text-muted">
+                  {{ latest_notice.description|truncate_html:150|safe }}
+              </p>
+              <a class="btn btn-sm btn-danger mb-3" href="{% url 'core:notice_detail' latest_notice.id %}">
+                  Read More
+              </a>
             </div>
           </div>
           {% endif %}
