--- a/templates/account/new_password.html
+++ b/templates/account/new_password.html
@@ -15,7 +15,7 @@
       content="width=device-width, initial-scale=1.0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0"
     />
 
-    <title>Login | Cparobust</title>
+    <title>New Password | Cparobust</title>
 
     <meta name="description" content="" />
 
@@ -58,7 +58,7 @@
     <div class="container-xxl">
       <div class="authentication-wrapper authentication-basic container-p-y">
         <div class="authentication-inner">
-          <!-- Register -->
+          <!-- New Password -->
           <div class="card">
             <div class="card-body">
               <!-- Logo -->
@@ -70,66 +70,58 @@
                 </a>
               </div>
               <!-- /Logo -->
-              <h4 class="mb-2">Welcome to CPA Robust! 👋</h4>
-              <p class="mb-4">Please sign-in to your account and start the adventure</p>
+              <p class="mb-4">Enter your new password to reset it.</p>
+                {% if messages %}
+                    <div class="container mt-3">
+                        {% for message in messages %}
+                        <div class="alert alert-{{ message.tags }}" role="alert">
+                            {{ message }}
+                        </div>
+                        {% endfor %}
+                    </div>
+                {% endif %}
 
-              <form id="formAuthentication" class="mb-3" action="{% url 'account:login' %}" method="POST">
+
+              <form id="formAuthentication" class="mb-3" action="{% url 'account:new_password' uidb64=uidb64 token=token %}" method="POST">
                 {% csrf_token %}
                 <div class="mb-3">
-                  <label for="email" class="form-label">Email</label>
+                  <label for="new_password1" class="form-label">New Password</label>
                   <input
-                    type="text"
+                    type="password"
                     class="form-control"
-                    id="email"
-                    name="email"
-                    placeholder="Enter your email"
+                    id="new_password1"
+                    name="new_password1"
+                    placeholder="Enter your new password"
                     autofocus
                   />
                 </div>
-                <div class="mb-3 form-password-toggle">
-                  <div class="d-flex justify-content-between">
-                    <label class="form-label" for="password">Password</label>
-                    <a href="{% url 'account:forgot_password' %}">
-                      <small>Forgot Password?</small>
-                    </a>
-                  </div>
-                  <div class="input-group input-group-merge">
-                    <input
-                      type="password"
-                      id="password"
-                      class="form-control"
-                      name="password"
-                      placeholder="&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;"
-                      aria-describedby="password"
-                    />
-                    <span class="input-group-text cursor-pointer"><i class="bx bx-hide"></i></span>
-                  </div>
+                <div class="mb-3">
+                  <label for="new_password2" class="form-label">Confirm Password</label>
+                  <input
+                    type="password"
+                    class="form-control"
+                    id="new_password2"
+                    name="new_password2"
+                    placeholder="Confirm your new password"
+                  />
                 </div>
                 <div class="mb-3">
-                  <div class="form-check">
-                    <input class="form-check-input" type="checkbox" id="remember-me" />
-                    <label class="form-check-label" for="remember-me"> Remember Me </label>
-                  </div>
-                </div>
-                <div class="mb-3">
-                  <button class="btn btn-primary d-grid w-100" type="submit">Sign in</button>
+                  <button class="btn btn-primary d-grid w-100" type="submit">Reset Password</button>
                 </div>
               </form>
 
               <p class="text-center">
-                <span>New on our platform?</span>
-                <a href="{% url 'account:register' %}">
-                  <span>Create an account</span>
+                <span>Remember your password?</span>
+                <a href="{% url 'account:login' %}">
+                  <span>Sign in</span>
                 </a>
               </p>
             </div>
           </div>
-          <!-- /Register -->
+          <!-- /New Password -->
         </div>
       </div>
     </div>
-
-  
 
     <!-- Core JS -->
     <!-- build:js assets/vendor/js/core.js -->
@@ -148,7 +140,6 @@
 
     <!-- Page JS -->
 
-    <!-- Place this tag in your head or just before your close body tag. -->
     <script async defer src="https://buttons.github.io/buttons.js"></script>
   </body>
 </html>
