--- a/templates/landing/contact-us.html
+++ b/templates/landing/contact-us.html
@@ -33,7 +33,7 @@
             <h4 class="pt-1" data-aos="fade-down">{{setting.contact_page_email}}</h4>
           </div>
           <div data-aos="fade-up">
-            <button class="btn btn-rounded btn-outline-danger">Send Mail</button>
+            <a href="mailto:{{setting.contact_page_email}}" class="btn btn-rounded btn-outline-danger">Send Mail</a>
           </div>          
         </div>
         <div class="contact-us-bgimage grid-margin" >
@@ -42,7 +42,7 @@
               <h4 class="pt-1" data-aos="fade-down">{{setting.contact_page_skype}}</h4>
             </div>
             <div data-aos="fade-up">
-              <button class="btn btn-rounded btn-outline-danger">Send Mail</button>
+              <a href="skype:{{setting.contact_page_skype}}?chat" class="btn btn-rounded btn-outline-danger">Send Message</a>
             </div>          
           </div>
       </section>
