--- a/templates/partials/base.html
+++ b/templates/partials/base.html
@@ -61,11 +61,14 @@
       <!-- Layout container -->
       <div class="layout-page">
 
-        <div class="container mt-2">
-          <div class="alert alert-danger" role="alert">
-            Your account is currently inactive. Please contact with adminstrator.
-          </div>
-        </div>
+        {% if request.user.is_approved != 'Active' %}
+            <div class="container mt-2">
+              <div class="alert alert-danger" role="alert">
+                Your account is currently inactive. Please contact the administrator.
+              </div>
+            </div>
+        {% endif %}
+
         <!-- Navbar -->
 
         <nav class="layout-navbar container-xxl navbar navbar-expand-xl navbar-detached align-items-center bg-navbar-theme" id="layout-navbar">
