--- a/templates/partials/base.html
+++ b/templates/partials/base.html
@@ -40,6 +40,8 @@
 
   <link rel="stylesheet" href="{% static '/assets/vendor/libs/apex-charts/apex-charts.css' %}" />
 
+  {% block style %} {% endblock %}
+
   <!-- Page CSS -->
 
 
