--- a/templates/admin/index.html
+++ b/templates/admin/index.html
@@ -10,7 +10,12 @@
                     <option value="all" {% if request.GET.filter_type == 'all' %}selected{% endif %}>All Time</option>
                     <option value="today" {% if request.GET.filter_type == 'today' %}selected{% endif %}>Today</option>
                     <option value="yesterday" {% if request.GET.filter_type == 'yesterday' %}selected{% endif %}>Yesterday</option>
-                    <option value="last_7_days" {% if request.GET.filter_type == 'last_7_days' %}selected{% endif %}>Last 7 Days</option>
+                    <option value="this_week" {% if request.GET.filter_type == 'this_week' %}selected{% endif %}>This Week</option>
+                    <option value="last_week" {% if request.GET.filter_type == 'last_week' %}selected{% endif %}>Last Week</option>
+                    <option value="this_month" {% if request.GET.filter_type == 'this_month' %}selected{% endif %}>This Month</option>
+                    <option value="last_month" {% if request.GET.filter_type == 'last_month' %}selected{% endif %}>Last Month</option>
+                    <option value="this_year" {% if request.GET.filter_type == 'this_year' %}selected{% endif %}>This Year</option>
+                    <option value="last_year" {% if request.GET.filter_type == 'last_year' %}selected{% endif %}>Last Year</option>
                     <option value="custom_range" {% if request.GET.filter_type == 'custom_range' %}selected{% endif %}>Custom Range</option>
                 </select>
             </div>
