--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -8,10 +8,10 @@
 {% block style %} 
 <style>
   @media (max-width: 768px) {
-    .chart-container {
-      height: 600px;
-    }
-  }
+            #weeklyChart {
+                height: 500px;
+            }
+        }
 </style>
 {% endblock %}
 
