--- a/templates/landing/contact-us.html
+++ b/templates/landing/contact-us.html
@@ -36,7 +36,7 @@
             <a href="mailto:{{setting.contact_page_email}}" class="btn btn-rounded btn-outline-danger">Send Mail</a>
           </div>          
         </div>
-        <div class="contact-us-bgimage grid-margin" >
+        <div class="contact-us-bgimage grid-margin" style="background-image: url('https://images.rawpixel.com/image_800/czNmcy1wcml2YXRlL3Jhd3BpeGVsX2ltYWdlcy93ZWJzaXRlX2NvbnRlbnQvbHIvdjk2MC1uaW5nLTMwLmpwZw.jpg')" >
             <div class="pb-2">
               <h4 class="px-3 px-md-0 m-0" data-aos="fade-down">Skype</h4>
               <h4 class="pt-1" data-aos="fade-down">{{setting.contact_page_skype}}</h4>
