--- a/templates/account/profile.html
+++ b/templates/account/profile.html
@@ -66,13 +66,26 @@
                   </div>
                 </div>
                 <div class="mb-3 col-md-6">
+                  <label class="form-label" for="phoneNumber">Facebook Account</label>
+                  <div class="input-group input-group-merge">
+                    <input type="text" id="fb_id" placeholder="Enter your facebook" name="fb_id" class="form-control" value="{{request.user.fb_id}}" />
+                  </div>
+                </div>
+                <div class="mb-3 col-md-6">
                   <label for="address" class="form-label">Address</label>
                   <input type="text" class="form-control" placeholder="Enter your address" id="address" name="address" value="{{request.user.address}}" />
                 </div>
                 <div class="mb-3 col-md-6">
-                  <label for="state" class="form-label">Country</label>
-                  <input class="form-control" type="text" placeholder="Enter your country" id="country" name="country" value="{{request.user.country}}" />
-                </div>
+                  <label for="country" class="form-label">Country</label>
+                  <select class="form-control" id="country" name="country">
+                    <option value="" disabled selected>Select your country</option>
+                    {% for country in countries %}
+                      <option value="{{ country }}" {% if country == request.user.country %}selected{% endif %}>
+                        {{ country }}
+                      </option>
+                    {% endfor %}
+                  </select>
+                </div>                
                 <div class="mb-3 col-md-6">
                   <label for="state" class="form-label">City</label>
                   <input class="form-control" type="text" placeholder="Enter your city" id="city" name="city" value="{{request.user.city}}" />
